build: check ${ESP_MATTER_PATH} before building

--- a/examples/lighting-app/CMakeLists.txt
+++ b/examples/lighting-app/CMakeLists.txt
@@ -15,6 +15,10 @@
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
 
+if(NOT DEFINED $ENV{ESP_MATTER_PATH})
+    message(FATAL_ERROR "Please set ESP_MATTER_PATH to esp-matter repo")
+endif()
+
 set(ESP_MATTER_PATH $ENV{ESP_MATTER_PATH})
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
