Fix compilation of the lighting app

--- a/examples/lighting-app/CMakeLists.txt
+++ b/examples/lighting-app/CMakeLists.txt
@@ -15,9 +15,9 @@
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
 
-if(NOT DEFINED $ENV{ESP_MATTER_PATH})
-    message(FATAL_ERROR "Please set ESP_MATTER_PATH to esp-matter repo")
-endif()
+if(NOT DEFINED ENV{ESP_MATTER_PATH})
+    message(FATAL_ERROR "Please set ESP_MATTER_PATH to the path of esp-matter repo")
+endif(NOT DEFINED ENV{ESP_MATTER_PATH})
 
 set(ESP_MATTER_PATH $ENV{ESP_MATTER_PATH})
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
