--- a/examples/lighting-app/CMakeLists.txt
+++ b/examples/lighting-app/CMakeLists.txt
@@ -18,24 +18,23 @@ cmake_minimum_required(VERSION 3.5)
 if(NOT DEFINED ENV{ESP_MATTER_PATH})
     message(FATAL_ERROR "Please set ESP_MATTER_PATH to the path of esp-matter repo")
 endif(NOT DEFINED ENV{ESP_MATTER_PATH})
-
 set(ESP_MATTER_PATH $ENV{ESP_MATTER_PATH})
+
+# This should be done before using the IDF_TARGET variable.
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
 set(EXTRA_COMPONENT_DIRS
     "${ESP_MATTER_PATH}/connectedhomeip/config/esp32/components"
-)
-if(${IDF_TARGET} STREQUAL "esp32")
-    list(APPEND EXTRA_COMPONENT_DIRS
-        "${ESP_MATTER_PATH}/connectedhomeip/examples/common/m5stack-tft/repo/components/tft"
-        "${ESP_MATTER_PATH}/connectedhomeip/examples/common/m5stack-tft/repo/components/spidriver"
-   )
-elseif(${IDF_TARGET} STREQUAL "esp32c3")
-    list(APPEND EXTRA_COMPONENT_DIRS
-        "${ESP_MATTER_PATH}/esp-idf/examples/peripherals/rmt/led_strip/components"
-    )
-endif()
+    "${ESP_MATTER_PATH}/components")
+
+# Set the BOARD_NAME from environment, if exported. Set the default BOARD_NAME based on IDF_TARGET, if not exported.
+# This also adds any chip specific components to EXTRA_COMPONENT_DIRS.
+include(${ESP_MATTER_PATH}/components/board/get_board.cmake)
+
+# Include the board.cmake file from the selected BOARD_NAME.
+include(${ESP_MATTER_PATH}/components/board/${BOARD_NAME}/board.cmake)
 
 project(esp-lighting-app)
+
 idf_build_set_property(CXX_COMPILE_OPTIONS "-std=gnu++14;-Os;-DLWIP_IPV6_SCOPES=0;-DCHIP_HAVE_CONFIG_H" APPEND)
 idf_build_set_property(C_COMPILE_OPTIONS "-Os;-DLWIP_IPV6_SCOPES=0" APPEND)
