--- a/examples/lighting-app/main/CMakeLists.txt
+++ b/examples/lighting-app/main/CMakeLists.txt
@@ -27,22 +27,8 @@ set(SRC_DIRS_LIST          "${CMAKE_CURRENT_LIST_DIR}"
                            "${ESP_MATTER_PATH}/connectedhomeip/src/app/clusters/operational-credentials-server"
                            "${ESP_MATTER_PATH}/connectedhomeip/src/app/clusters/level-control")
 
-if("${CONFIG_DEVICE_TYPE_ESP32_DEVKITC}" STREQUAL "y")
-    set(EXCLUDE_SRCS_LIST "${CMAKE_CURRENT_LIST_DIR}/led_manager_rmt.cpp"
-                          "${CMAKE_CURRENT_LIST_DIR}/led_manager_vled.cpp"
-    )
-    set(PRIV_REQUIRES_LIST chip bt esp32_mbedtls)
-elseif("${CONFIG_DEVICE_TYPE_ESP32C3_DEVKITM}" STREQUAL "y")
-    set(EXCLUDE_SRCS_LIST "${CMAKE_CURRENT_LIST_DIR}/led_manager_gpio.cpp"
-                          "${CMAKE_CURRENT_LIST_DIR}/led_manager_vled.cpp"
-    )
-    set(PRIV_REQUIRES_LIST chip bt esp32_mbedtls led_strip)
-elseif("${CONFIG_DEVICE_TYPE_M5STACK}" STREQUAL "y")
-    set(EXCLUDE_SRCS_LIST "${CMAKE_CURRENT_LIST_DIR}/led_manager_rmt.cpp"
-                          "${CMAKE_CURRENT_LIST_DIR}/led_manager_gpio.cpp"
-    )
-    set(PRIV_REQUIRES_LIST chip bt esp32_mbedtls tft spidriver)
-endif()
+set(PRIV_REQUIRES_LIST chip bt esp32_mbedtls board led_driver button_driver)
+
 idf_component_register(PRIV_INCLUDE_DIRS ${PRIV_INCLUDE_DIRS_LIST}
                       SRC_DIRS           ${SRC_DIRS_LIST}
                       EXCLUDE_SRCS       ${EXCLUDE_SRCS_LIST}
