config BOARD_NAME in Kconfig

--- a/components/board/CMakeLists.txt
+++ b/components/board/CMakeLists.txt
@@ -1,9 +1,4 @@
-set(COMPONENT_ADD_INCLUDEDIRS include)
-
-# Edit following two lines to set component requirements (see docs)
-set(COMPONENT_REQUIRES )
-set(COMPONENT_PRIV_REQUIRES led_driver button_driver)
-
-set(COMPONENT_SRCS ${BOARD_PATH}/board.c)
-
-register_component()
+idf_component_register(SRC_DIRS "${CONFIG_BOARD_NAME}"
+                        INCLUDE_DIRS include
+                        PRIV_INCLUDE_DIRS
+                        REQUIRES button_driver led_driver)
