--- a/components/led_driver/CMakeLists.txt
+++ b/components/led_driver/CMakeLists.txt
@@ -7,6 +7,6 @@ elseif(${IDF_TARGET} STREQUAL "esp32c3")
     list(APPEND requires_list led_strip)
 endif()
 
-idf_component_register(SRCS ${LED_DRIVER_PATH}/led_driver.c
+idf_component_register(SRCS ${CONFIG_LED_DRIVER}/led_driver.c
                     INCLUDE_DIRS include
                     REQUIRES ${requires_list})
