--- a/examples/rainmaker_light/main/CMakeLists.txt
+++ b/examples/rainmaker_light/main/CMakeLists.txt
@@ -1,7 +1,3 @@
-set(PRIV_INCLUDE_DIRS_LIST "${CMAKE_CURRENT_LIST_DIR}"
-                           "${ESP_MATTER_PATH}/connectedhomeip/src"
-                           "${CMAKE_CURRENT_LIST_DIR}/include")
-
 set(SRC_DIRS_LIST          "${CMAKE_CURRENT_LIST_DIR}"
                            "${CMAKE_CURRENT_LIST_DIR}/gen"
                            "${ESP_MATTER_PATH}/connectedhomeip/src/app/server"
@@ -15,12 +11,14 @@ set(SRC_DIRS_LIST          "${CMAKE_CURRENT_LIST_DIR}"
                            "${ESP_MATTER_PATH}/connectedhomeip/src/app/clusters/level-control"
                            "${ESP_MATTER_PATH}/connectedhomeip/src/app/clusters/color-control-server")
 
+set(INCLUDE_DIRS_LIST      "${CMAKE_CURRENT_LIST_DIR}"
+                           "${ESP_MATTER_PATH}/connectedhomeip/src")
+
 set(PRIV_REQUIRES_LIST chip bt esp32_mbedtls app_driver esp_rainmaker)
 
-idf_component_register(PRIV_INCLUDE_DIRS ${PRIV_INCLUDE_DIRS_LIST}
-                      SRC_DIRS           ${SRC_DIRS_LIST}
-                      EXCLUDE_SRCS       ${EXCLUDE_SRCS_LIST}
-                      PRIV_REQUIRES      ${PRIV_REQUIRES_LIST})
+idf_component_register(SRC_DIRS         ${SRC_DIRS_LIST}
+                      INCLUDE_DIRS      ${INCLUDE_DIRS_LIST}
+                      PRIV_REQUIRES     ${PRIV_REQUIRES_LIST})
 
 set_property(TARGET ${COMPONENT_LIB} PROPERTY CXX_STANDARD 14) 
 target_compile_options(${COMPONENT_LIB} PRIVATE "-DLWIP_IPV6_SCOPES=0" "-DCHIP_HAVE_CONFIG_H")
