--- a/examples/rainmaker_light/main/CMakeLists.txt
+++ b/examples/rainmaker_light/main/CMakeLists.txt
@@ -1,18 +1,18 @@
 set(SRC_DIRS_LIST          "${CMAKE_CURRENT_LIST_DIR}"
                            "${CMAKE_CURRENT_LIST_DIR}/gen"
-                           "${ESP_MATTER_PATH}/connectedhomeip/src/app/server"
-                           "${ESP_MATTER_PATH}/connectedhomeip/src/app/util"
-                           "${ESP_MATTER_PATH}/connectedhomeip/src/app/reporting"
-                           "${ESP_MATTER_PATH}/connectedhomeip/src/app/clusters/basic"
-                           "${ESP_MATTER_PATH}/connectedhomeip/src/app/clusters/general-commissioning-server"
-                           "${ESP_MATTER_PATH}/connectedhomeip/src/app/clusters/network-commissioning"
-                           "${ESP_MATTER_PATH}/connectedhomeip/src/app/clusters/on-off-server"
-                           "${ESP_MATTER_PATH}/connectedhomeip/src/app/clusters/operational-credentials-server"
-                           "${ESP_MATTER_PATH}/connectedhomeip/src/app/clusters/level-control"
-                           "${ESP_MATTER_PATH}/connectedhomeip/src/app/clusters/color-control-server")
+                           "${MATTER_SDK_PATH}/src/app/server"
+                           "${MATTER_SDK_PATH}/src/app/util"
+                           "${MATTER_SDK_PATH}/src/app/reporting"
+                           "${MATTER_SDK_PATH}/src/app/clusters/basic"
+                           "${MATTER_SDK_PATH}/src/app/clusters/general-commissioning-server"
+                           "${MATTER_SDK_PATH}/src/app/clusters/network-commissioning"
+                           "${MATTER_SDK_PATH}/src/app/clusters/on-off-server"
+                           "${MATTER_SDK_PATH}/src/app/clusters/operational-credentials-server"
+                           "${MATTER_SDK_PATH}/src/app/clusters/level-control"
+                           "${MATTER_SDK_PATH}/src/app/clusters/color-control-server")
 
 set(INCLUDE_DIRS_LIST      "${CMAKE_CURRENT_LIST_DIR}"
-                           "${ESP_MATTER_PATH}/connectedhomeip/src")
+                           "${MATTER_SDK_PATH}/src")
 
 set(PRIV_REQUIRES_LIST chip bt esp32_mbedtls app_driver esp_rainmaker)
 
@@ -20,5 +20,5 @@ idf_component_register(SRC_DIRS         ${SRC_DIRS_LIST}
                       INCLUDE_DIRS      ${INCLUDE_DIRS_LIST}
                       PRIV_REQUIRES     ${PRIV_REQUIRES_LIST})
 
-set_property(TARGET ${COMPONENT_LIB} PROPERTY CXX_STANDARD 14) 
+set_property(TARGET ${COMPONENT_LIB} PROPERTY CXX_STANDARD 14)
 target_compile_options(${COMPONENT_LIB} PRIVATE "-DLWIP_IPV6_SCOPES=0" "-DCHIP_HAVE_CONFIG_H")
