--- a/components/esp_matter_console/CMakeLists.txt
+++ b/components/esp_matter_console/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS esp_matter_console.cpp esp_matter_console_diagnostics.cpp
                     INCLUDE_DIRS .
-                    PRIV_REQUIRES chip esp32_mbedtls)
+                    PRIV_REQUIRES chip esp32_mbedtls esp_timer)
