--- a/examples/zigbee_bridge/main/idf_component.yml
+++ b/examples/zigbee_bridge/main/idf_component.yml
@@ -1,6 +1,7 @@
 ## IDF Component Manager Manifest File
 dependencies:
   espressif/esp-zboss-lib: "~=0.0.4"
+  qrcode: "^0.1.0"
   ## Required IDF version
   idf:
     version: ">=5.0.0"
