Disable fan driver for S3

--- a/device_hal/device/CMakeLists.txt
+++ b/device_hal/device/CMakeLists.txt
@@ -1,6 +1,11 @@
 include($ENV{ESP_MATTER_DEVICE_PATH}/esp_matter_device.cmake)
 
-set(requires led_driver fan_driver)
+set(requires led_driver)
+
+# fan_driver is only added for C3 and ESP32
+if (CONFIG_IDF_TARGET_ESP32C3 OR CONFIG_IDF_TARGET_ESP32)
+    list(APPEND requires fan_driver)
+endif()
 
 if ("${button_type}" STREQUAL "iot")
     list(APPEND requires iot_button)
