--- a/examples/fan/CMakeLists.txt
+++ b/examples/fan/CMakeLists.txt
@@ -36,6 +36,7 @@ set(EXTRA_COMPONENT_DIRS
     "${MATTER_SDK_PATH}/config/esp32/components"
     "${ESP_MATTER_PATH}/components"
     "${ESP_MATTER_PATH}/device_hal/device"
+    "${ESP_MATTER_PATH}/device_hal"
     ${extra_components_dirs_append})
 
 project(fan)
