--- a/examples/fan/CMakeLists.txt
+++ b/examples/fan/CMakeLists.txt
@@ -1,6 +1,8 @@
 # The following lines of boilerplate have to be in your project's
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
+add_compile_options(-fdiagnostics-color=always -Wno-format -Wno-missing-field-initializers -Wno-overflow)
+
 
 if(NOT DEFINED ENV{ESP_MATTER_PATH})
     message(FATAL_ERROR "Please set ESP_MATTER_PATH to the path of esp-matter repo")
