--- a/examples/s3_box_switch/main/CMakeLists.txt
+++ b/examples/s3_box_switch/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(PRIV_REQUIRES_LIST device esp_matter esp_matter_console route_hook app_reset spiffs esp_lcd lvgl esp-sr libhelix-mp3 wifi_provisioning led_strip)
+set(PRIV_REQUIRES_LIST device esp_matter esp_matter_console esp_matter_controller route_hook app_reset spiffs esp_lcd lvgl esp-sr libhelix-mp3 wifi_provisioning led_strip)
 
 idf_component_register(SRC_DIRS          "." "./box" "./box/app" "./box/gui" "./box/gui/font" "./box/gui/image"
                       PRIV_INCLUDE_DIRS  "." "./box" "./box/app" "./box/gui"
