change example software version string format form v1.0 to 1.0 for apple homekit show

--- a/examples/zigbee_bridge/CMakeLists.txt
+++ b/examples/zigbee_bridge/CMakeLists.txt
@@ -17,7 +17,7 @@ if(NOT DEFINED ENV{ESP_MATTER_DEVICE_PATH})
     endif()
 endif(NOT DEFINED ENV{ESP_MATTER_DEVICE_PATH})
 
-set(PROJECT_VER "v1.0")
+set(PROJECT_VER "1.0")
 set(PROJECT_VER_NUMBER 1)
 
 set(ESP_MATTER_PATH $ENV{ESP_MATTER_PATH})
