Add light + OTBR example

--- a/examples/light/main/CMakeLists.txt
+++ b/examples/light/main/CMakeLists.txt
@@ -1,5 +1,12 @@
-idf_component_register(SRC_DIRS          "."
-                       PRIV_INCLUDE_DIRS  "." "${ESP_MATTER_PATH}/examples/common/utils")
+set(ldfragments linker.lf)
+idf_component_register(SRCS
+                           "app_driver.cpp"
+                           "app_main.cpp"
+                       PRIV_INCLUDE_DIRS
+                           "."
+                           "${ESP_MATTER_PATH}/examples/common/utils"
+                        LDFRAGMENTS
+                           "${ldfragments}")
 
 set_property(TARGET ${COMPONENT_LIB} PROPERTY CXX_STANDARD 17)
 target_compile_options(${COMPONENT_LIB} PRIVATE "-DCHIP_HAVE_CONFIG_H")
