add some debug option

--- a/examples/light/CMakeLists.txt
+++ b/examples/light/CMakeLists.txt
@@ -20,7 +20,8 @@ set(EXTRA_COMPONENT_DIRS
     "${ESP_MATTER_PATH}/examples/common"
     "${MATTER_SDK_PATH}/config/esp32/components"
     "${ESP_MATTER_PATH}/components"
-    ${extra_components_dirs_append})
+    ${extra_components_dirs_append}
+    "/home/liyashuai/esp/esp-zboss/components")
 
 project(light)
 
