--- a/examples/common/app_reset/CMakeLists.txt
+++ b/examples/common/app_reset/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS app_reset.cpp
                     INCLUDE_DIRS .
-                    REQUIRES button esp_matter)
+                    REQUIRES button esp_matter esp_zb_sdk)
