--- a/examples/mfg_test_app/main/CMakeLists.txt
+++ b/examples/mfg_test_app/main/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(PRIV_REQUIRES_LIST esp_matter bootloader_support)
 
 idf_component_register(SRC_DIRS           "."
-                       PRIV_INCLUDE_DIRS  "."
+                       PRIV_INCLUDE_DIRS  "." "${ESP_MATTER_PATH}/examples/common/utils"
                        PRIV_REQUIRES      ${PRIV_REQUIRES_LIST}
                        EMBED_FILES        "paa_cert.der")
 
