add BLE OTA and enable compress OTA

--- a/awox_light/common/platform/ESP32_custom/BUILD.gn
+++ b/awox_light/common/platform/ESP32_custom/BUILD.gn
@@ -106,6 +106,31 @@ static_library("ESP32_custom") {
     "PlatformManagerImpl.h",
     "SystemTimeSupport.cpp",
     "SystemTimeSupport.h",
+    "BleManager/BleGatt.cpp",
+    "BleManager/BleGatt.hpp",
+    "BleManager/BleManager.cpp",
+    "BleManager/BleManager.hpp",
+    "BleManager/Characteristics/BleDataCommandChr.cpp",
+    "BleManager/Characteristics/BleDataCommandChr.hpp",
+    "BleManager/Characteristics/BleDataNotificationChr.cpp",
+    "BleManager/Characteristics/BleDataNotificationChr.hpp",
+    "BleManager/Characteristics/BleFastOtaChr.cpp",
+    "BleManager/Characteristics/BleFastOtaChr.hpp",
+    "BleManager/Characteristics/BlePairingChr.cpp",
+    "BleManager/Characteristics/BlePairingChr.hpp",
+    # "../../../light_dimmable_pwm/managed_components/espressif__bootloader_support_plus/include/bootloader_custom_ota.h",
+    # "../../../light_dimmable_pwm/managed_components/espressif__bootloader_support_plus/private_include/bootloader_custom_malloc.h",
+    # "../../../light_dimmable_pwm/managed_components/espressif__bootloader_support_plus/private_include/bootloader_custom_utility.h",
+    # "../../../light_dimmable_pwm/managed_components/espressif__bootloader_support_plus/private_include/bootloader_decompressor_common.h",
+    # "../../../light_dimmable_pwm/managed_components/espressif__bootloader_support_plus/private_include/bootloader_decompressor_xz.h",
+    # "../../../light_dimmable_pwm/managed_components/espressif__bootloader_support_plus/private_include/bootloader_storage_flash.h",
+    # "../../../light_dimmable_pwm/managed_components/espressif__bootloader_support_plus/src/bootloader_custom_image_format.c",
+    # "../../../light_dimmable_pwm/managed_components/espressif__bootloader_support_plus/src/bootloader_custom_malloc.c",
+    # "../../../light_dimmable_pwm/managed_components/espressif__bootloader_support_plus/src/bootloader_custom_ota.c",
+    # "../../../light_dimmable_pwm/managed_components/espressif__bootloader_support_plus/src/bootloader_custom_utility.c",
+    # "../../../light_dimmable_pwm/managed_components/espressif__bootloader_support_plus/src/bootloader_decompressor_common.c",
+    # "../../../light_dimmable_pwm/managed_components/espressif__bootloader_support_plus/src/bootloader_decompressor_xz.c",
+    # "../../../light_dimmable_pwm/managed_components/espressif__bootloader_support_plus/src/bootloader_storage_flash.c",
   ]
 
   deps = [
