--- a/awox_light/light_cw_pwm/main/idf_component.yml
+++ b/awox_light/light_cw_pwm/main/idf_component.yml
@@ -1,4 +1,5 @@
 dependencies:
+  espressif/bootloader_support_plus: "=0.2.5"
   espressif/cmake_utilities:
     version: 0.*
     rules: # will add "optional_component" only when all if clauses are True
@@ -6,3 +7,5 @@ dependencies:
       - if: "target in [esp32c2]"
   esp_bsp_generic:
     version: "^1.1.0"
+  espressif/bootloader_support_plus:
+    version: "0.2.5"
