esp_matter: create a data_model directory and move data_model related codes to it

--- a/components/esp_matter/Kconfig
+++ b/components/esp_matter/Kconfig
@@ -212,6 +212,7 @@ menu "ESP Matter"
 
     config ESP_MATTER_ENABLE_DATA_MODEL
         bool "Use ESP-Matter data model"
+        depends on ESP_MATTER_ENABLE_MATTER_SERVER
         default y
         help
             This option should be disable for zap examples
