[TE-2 1.5] : Updated the chip submodule to TE2 SHA. - Fixed the crash due to OTA Provider cluster. - Removed the OTA Provider emberAf callbacks. - Updated the zap and cluster files using script. - Added the static_cluster_files as per latest addition in the generated files structure.

--- a/components/esp_matter/CMakeLists.txt
+++ b/components/esp_matter/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SRC_DIRS_LIST       "."
                         "utils"
                         "${MATTER_SDK_PATH}/zzz_generated/app-common/app-common/zap-generated/attributes"
                         "${MATTER_SDK_PATH}/src/app/server"
+                        "${MATTER_SDK_PATH}/src/app/server-cluster"
                         "${MATTER_SDK_PATH}/src/app/util"
                         "${MATTER_SDK_PATH}/src/app/util/persistence"
                         "${MATTER_SDK_PATH}/src/app/reporting"
