--- a/components/esp_matter/utils/cluster_select/Kconfig.in
+++ b/components/esp_matter/utils/cluster_select/Kconfig.in
@@ -53,6 +53,10 @@ config SUPPORT_BRIDGED_DEVICE_BASIC_INFORMATION_CLUSTER
 	bool "Support BRIDGED_DEVICE_BASIC_INFORMATION_CLUSTER"
 	default y
 
+config SUPPORT_CAMERA_AV_SETTINGS_USER_LEVEL_MANAGEMENT_CLUSTER
+	bool "Support CAMERA_AV_SETTINGS_USER_LEVEL_MANAGEMENT_CLUSTER"
+	default y
+
 config SUPPORT_CAMERA_AV_STREAM_MANAGEMENT_CLUSTER
 	bool "Support CAMERA_AV_STREAM_MANAGEMENT_CLUSTER"
 	default y
@@ -77,12 +81,20 @@ config SUPPORT_CLOSURE_CONTROL_CLUSTER
 	bool "Support CLOSURE_CONTROL_CLUSTER"
 	default y
 
+config SUPPORT_CLOSURE_DIMENSION_CLUSTER
+	bool "Support CLOSURE_DIMENSION_CLUSTER"
+	default y
+
 config SUPPORT_COLOR_CONTROL_CLUSTER
 	bool "Support COLOR_CONTROL_CLUSTER"
 	default y
 
 config SUPPORT_COMMISSIONER_CONTROL_CLUSTER
 	bool "Support COMMISSIONER_CONTROL_CLUSTER"
+	default y
+
+config SUPPORT_COMMODITY_PRICE_CLUSTER
+	bool "Support COMMODITY_PRICE_CLUSTER"
 	default y
 
 config SUPPORT_CONTENT_LAUNCHER_CLUSTER
@@ -119,6 +131,14 @@ config SUPPORT_DISHWASHER_ALARM_CLUSTER
 
 config SUPPORT_DISHWASHER_MODE_CLUSTER
 	bool "Support DISHWASHER_MODE_CLUSTER"
+	default y
+
+config SUPPORT_ELECTRICAL_GRID_CONDITIONS_CLUSTER
+	bool "Support ELECTRICAL_GRID_CONDITIONS_CLUSTER"
+	default y
+
+config SUPPORT_METER_IDENTIFICATION_CLUSTER
+	bool "Support METER_IDENTIFICATION_CLUSTER"
 	default y
 
 config SUPPORT_MICROWAVE_OVEN_MODE_CLUSTER
@@ -403,6 +423,10 @@ config SUPPORT_TIMER_CLUSTER
 
 config SUPPORT_TVOC_CONCENTRATION_MEASUREMENT_CLUSTER
 	bool "Support TVOC_CONCENTRATION_MEASUREMENT_CLUSTER"
+	default y
+
+config SUPPORT_UNIT_LOCALIZATION_CLUSTER
+	bool "Support UNIT_LOCALIZATION_CLUSTER"
 	default y
 
 config SUPPORT_UNIT_TESTING_CLUSTER
