add ota function for thread border router example

--- a/components/esp_matter/CMakeLists.txt
+++ b/components/esp_matter/CMakeLists.txt
@@ -34,7 +34,7 @@ else()
     list(APPEND EXCLUDE_SRCS_LIST "esp_matter_delegate_callbacks.cpp")
 endif()
 
-set(REQUIRES_LIST       chip bt esp_matter_console nvs_flash app_update esp_secure_cert_mgr mbedtls esp_system openthread json)
+set(REQUIRES_LIST       chip bt esp_matter_console nvs_flash app_update esp_secure_cert_mgr mbedtls esp_system openthread json espressif__esp_rcp_update)
 
 idf_component_register( SRC_DIRS        ${SRC_DIRS_LIST}
                         INCLUDE_DIRS    ${INCLUDE_DIRS_LIST}
