--- a/examples/thread_border_router/main/CMakeLists.txt
+++ b/examples/thread_border_router/main/CMakeLists.txt
@@ -1,5 +1,6 @@
 idf_component_register(SRC_DIRS          "."
-                       INCLUDE_DIRS      ".")
+                       INCLUDE_DIRS      "."
+                       LDFRAGMENTS "linker.lf")
 
 set_property(TARGET ${COMPONENT_LIB} PROPERTY CXX_STANDARD 17)
 target_compile_options(${COMPONENT_LIB} PRIVATE "-DCHIP_HAVE_CONFIG_H")
