Update zap and cluster files

--- a/components/esp_matter/utils/cluster_select/Kconfig.in
+++ b/components/esp_matter/utils/cluster_select/Kconfig.in
@@ -385,6 +385,10 @@ config SUPPORT_SOFTWARE_DIAGNOSTICS_CLUSTER
 	bool "Support SOFTWARE_DIAGNOSTICS_CLUSTER"
 	default y
 
+config SUPPORT_SOIL_MEASUREMENT_CLUSTER
+	bool "Support SOIL_MEASUREMENT_CLUSTER"
+	default y
+
 config SUPPORT_SWITCH_CLUSTER
 	bool "Support SWITCH_CLUSTER"
 	default y
